# geo-activity-playground

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Agents.md  Dockerfile  Elevation-Gain.ipynb  GEMINI.md  LICENSE  More-Stats.ipynb  README.md  Segment-Matching.ipynb  alembic.ini  babel.cfg  config-example.toml  config.toml.example  database.sqlite  docker-compose.yml  extract-changelog.py  index.html  line-draw-exploration.ipynb  manage.py  messages.mo  mkdocs.yml  package-lock.json  package.json  publish-docs  publish-release  publish-release.sh  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: add-issue-to-project.yml  deploy-docs.yml  ghcr_build.yml  remove-need-info-label.yml
acknowledgments/: index.html
add-local-bin-to-path/: index.html
advanced-metadata-extraction/: index.html
build-custom-plots/: index.html
change-database-schema/: index.html
changelog/: index.html
connect-strava-api/: index.html
create-a-base-directory/: index.html
create-a-privacy-zone/: index.html
directory-layout/: index.html
docs/: acknowledgments.md  activity-sources.md  add-local-bin-to-path.md  advanced-metadata-extraction.md  bike-maintenance-tracker.md  build-custom-plots.md  change-database-schema.md  changelog.md  cluster-history.md  connect-strava-api.md  contributors.md  create-a-base-directory.md  create-a-privacy-zone.md  directory-layout.md  docker-run.md  eddington-number.md  elevation-gain-from-noisy-data.md  explorer-tiles-on-the-go.md  explorer-tiles.md  get-help.md  getting-started.md  heart-rate-zones.md  heatmaps.md  import-activity-files.md  incremental-cluster-algorithm.md  index.md  install-on-linux.md  install-on-macos.md  install-on-windows.md  license.md  moving-from-strava.md  plan-missing-tile-rides.md  record-activities.md  recording-activities.md  rename-activity-kinds.md  satellite-elevation-isnt-helpful.md  screenshot-tour.md  segment-matching.md  set-up-a-development-environment.md  similar-projects.md  (+11 more)
docs/.vitepress/: config.ts
docs/explanation/: explorer-tiles.md
docs/features/: activity-view.md  calendar.md  eddington.md  equipment.md  explorer-tiles.md  heatmaps.md  kind-rename.md  overview.md  share-picture.md  upload.md
docs/getting-started/: advanced-metadata-extraction.md  config-file.md  docker-compose-tailscale.md  docker-compose.md  docker.md  installing-git-on-linux.md  installing-stable-on-linux.md  installing-stable-on-windows.md  kind rename.md  moving-from-strava.md  starting-the-webserver.md  using-activity-files.md  using-strava-api.md
docs/reference/: changelog.md  directory-layout.md
eddington-number/: index.html
elevation-gain-from-noisy-data/: index.html
explanation/explorer-tiles/: index.html
explorer-tiles/: index.html
features/activity-view/: index.html
features/calendar/: index.html
features/eddington/: index.html
features/equipment/: index.html
features/explorer-tiles/: index.html
features/heatmaps/: index.html
features/kind-rename/: index.html
features/overview/: index.html
features/share-picture/: index.html
features/upload/: index.html
gap_app/: admin.py  apps.py  models.py  urls.py  views.py
gap_app/migrations/: 0001_initial.py  0002_equipment_activity.py  0003_equipment_purchase_date.py  0004_alter_equipment_name_alter_kind_name.py  0005_alter_activity_elapsed_time_alter_activity_equipment_and_more.py  0006_alter_activity_elapsed_time_alter_activity_equipment_and_more.py  0007_activity_calories_activity_distance_km_and_more.py  0008_alter_activity_calories_alter_equipment_name_and_more.py
gap_site/: asgi.py  settings.py  urls.py  wsgi.py
geo_activity_playground/: __main__.py  asgi.py  directories.py  heatmap.py  heatmap_video.py  settings.py  test_tiles.py  tiles.py  urls.py  wsgi.py
geo_activity_playground/alembic/: env.py
geo_activity_playground/core/: activities.py  activity_parsers.py  cache_dir.py  cache_migrations.py  caching.py  config.py  coordinates.py  copernicus_dem.py  datamodel.py  directories.py  enrichment.py  entities.py  export.py  heart_rate.py  heatmap.py  heatmap_cache.py  kalman_filter.py  meta_search.py  missing_values.py  parametric_plot.py  paths.py  photos.py  plots.py  privacy_zones.py  raster_map.py  segments.py  similarity.py  sources.py  summary_stats.py  tag_extraction.py  tasks.py  test_config.py  test_datamodel.py  test_enrichment.py  test_meta_search.py  (+11 more)
get-help/: index.html
getting-started/: index.html  start.bat
heart-rate-zones/: index.html
heatmaps/: index.html
import-activity-files/: index.html
incremental-cluster-algorithm/: index.html
install-on-linux/: index.html
install-on-macos/: index.html
install-on-windows/: index.html
moving-from-strava/: index.html
plan-missing-tile-rides/: index.html
record-activities/: index.html
rename-activity-kinds/: index.html
satellite-elevation-isnt-helpful/: index.html
search/: search_index.json
segment-matching/: index.html
set-up-a-development-environment/: index.html
similar-projects/: index.html
starting-the-webserver/: index.html
strava-csv-columns/: export-mapping.py  mapping.ods
tests/: conftest.py  kp-niederkassler-straße.geojson  test_enrichment_tile_xy.py  test_explorer_tile_state_consistency.py  test_export_blueprint.py  test_geojson_segment_extraction.py  test_grid_file.py  test_heatmap_cache_import.py  test_importing.py  test_null_kind_equipment_guard.py  test_search_blueprint.py  test_segment_matching.py  test_segment_rematching.py  test_segments_blueprint.py  test_settings_maintenance.py  test_sharepic_robustness.py  test_tag_extraction.py  test_time_zone_import.py  test_waitress_header_dedup.py  test_webserver_wrapper.py  test_webui_smoke.py  webserver_wrapper.py
time-zone-handling-sucks/: index.html
update-and-extend-translations/: index.html
upload-activity-files/: index.html
using-git-version-via-docker/: index.html
using-git-version-via-docker-compose/: index.html
using-git-version-via-docker-compose-and-tailscale-vpn/: index.html
using-maps-as-overlays/: index.html
(+522 files in other folders)
