[tool.poetry]
name = "geo-activity-playground"
version = "0.36.2"
description = "Analysis of geo data activities like rides, runs or hikes."
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
geo-activity-playground = "geo_activity_playground.__main__:main"

[tool.poetry.dependencies]
python = "^3.10,<3.14"

altair = "^5.1.2"
appdirs = "^1.4.4"
charset-normalizer = "^3.3.2"
coloredlogs = "^15.0.1"
fitdecode = "^0.10.0"
flask = "^3.0.0"
geojson = "^3.0.1"
gpxpy = "^1.5.0"
jinja2 = "^3.1.2"
matplotlib = "^3.6.3"
numpy = "^2.1.3"
pandas = "^2.2"
Pillow = "^11.0.0"
pyarrow = "^18.1.0"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
stravalib = "^2.0"
tcxreader = "^0.4.5"
tomli = { version = "^2.0.1", python = "<3.11" }
tqdm = "^4.64.0"
vegafusion = { version = "^1.4.3", extras = ["embed"] }
vegafusion-python-embed = "^1.4.3"
vl-convert-python = "^1.0.1"
xmltodict = "^0.13.0"
shapely = "^2.0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mkdocs-material = "^9.4.1"
mypy = "^1.10.0"
pandas-stubs = "^2.2.2.240603"
py-spy = "^0.3.14"
pytest = "^8.0"
types-decorator = "^5.1.8.20240106"
types-paramiko = "^3.4.0.20240120"
types-pycurl = "^7.45.2.20240106"
types-pytz = "^2024.1.0.20240203"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.20240125"
types-tqdm = "^4.66.0.20240417"
types-typed-ast = "^1.5.8.7"
types-xmltodict = "^0.13.0.3"
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"
